# cppTasks

./: .gitignore  info.md
lab1/: CMakeLists.txt
lab1/src/executables/: CountWordsClass.cpp  main.cpp
lab2/: CMakeLists.txt
lab2/src/: CircularBuffer.cpp  CircularBuffer.h  erase.h  head.h  insert.h  linearized.h  main.cpp  resize.h  rotate.h  setCapacity.h  test.cpp
lab2/src/executables/: main.cpp
lab2/src/headers/: head.h
lab3/: CMakeLists.txt
lab3/src/: BlockOfCells.cpp  ChangeField.cpp  ConsoleArgumentChecker.cpp  EnterParametersFromConsole.cpp  ExceptionHandling.cpp  GameLogic.cpp  GameMessages.cpp  GameMessages.h  InputDataParser.cpp  InputFileParser.cpp  Life.cpp  Life.h  ParserConsoleParameters.cpp  gameLogic.cpp  main.cpp
lab4/: CMakeLists.txt
lab4/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  config.txt
lab4/include_libs/cxxopts/include/: cxxopts.hpp
lab4/lib/cxxopts/include/: cxxopts.hpp
lab4/lib/cxxopts/lib/pkgconfig/: cxxopts.pc
lab4/src/: Converter.cpp  Converter.h  CoutMessages.cpp  ParsingIArguments.cpp  ParsingInputParameters.cpp  SoundProcessor.cpp  SoundProcessor.h  main.cpp
lab4/src/executables/: ConsoleParser.cpp  Converter.cpp  ConverterManager.cpp  ConvertingMethods.cpp  CoutMessages.cpp  Exceptions.cpp  FilesParser.cpp  Messages.cpp  Parser.cpp  ParsingIArguments.cpp  SmartPointer.cpp  SoundProcessor.cpp  Streams.cpp  WavMetadataParse.cpp
lab4/src/headers/: ConsoleParser.h  Converter.h  ConvertersFactory.h  Exceptions.h  FilesParser.h  Messages.h  Parser.h  SoundProcessor.h  Streams.h  WavMetadataParse.h
lab5/: CMakeLists.txt
lab5/src/: main.cpp
lab5/src/executables/: csvParser.cpp
lab5/src/headers/: csvParser.h  exceptions.h  tuple.h  tuplePrint.h
task1/: CMakeLists.txt
task1/begin/: CMakeLists.txt  m1.cpp  m1.h  m2.cpp  m2.h  main.cpp
task1/src/: countWordsClass.cpp  countWordsClass.h  main.cpp
task1/src/executables/: countWordsClass.cpp
task1/src/headers/: countWordsClass.h
task1/src/test/: test.cpp
task1v3/src/executables/: countWordsClass.cpp  main.cpp
task1v3/src/headers/: CountWordsClass.h  countWordsClass.h  head.h
task1v3/src/test/: test.cpp
